[gd_scene load_steps=10 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 35
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
margin_right = 480.0
margin_bottom = 720.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.643137, 0.819608, 0.854902, 1 )

[node name="LocalMultiplayer" type="Button" parent="."]
margin_left = 145.0
margin_top = 248.0
margin_right = 337.0
margin_bottom = 312.0
custom_fonts/font = SubResource( 1 )
text = "Local multiplayer"

[node name="SinglePlayer" type="Button" parent="."]
margin_left = 147.0
margin_top = 160.0
margin_right = 339.0
margin_bottom = 224.0
custom_fonts/font = SubResource( 2 )
text = "Single Player"

[node name="OnlineMultiplayer" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -32.0
margin_right = 96.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 3 )
text = "Online Multiplayer"

[node name="Settings" type="Button" parent="."]
margin_left = 145.0
margin_top = 416.0
margin_right = 337.0
margin_bottom = 480.0
custom_fonts/font = SubResource( 4 )
text = "Settings"

[node name="Highscores" type="Button" parent="."]
margin_left = 144.0
margin_top = 506.0
margin_right = 336.0
margin_bottom = 570.0
custom_fonts/font = SubResource( 5 )
text = "Highscores"

[node name="About" type="Button" parent="."]
margin_left = 145.0
margin_top = 600.0
margin_right = 337.0
margin_bottom = 664.0
custom_fonts/font = SubResource( 6 )
text = "About"

[node name="Menu" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -60.0
margin_top = 81.0
margin_right = 60.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 7 )
text = "MENU"

[connection signal="pressed" from="LocalMultiplayer" to="." method="_on_LocalMultiplayer_pressed"]
[connection signal="pressed" from="SinglePlayer" to="." method="_on_SinglePlayer_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
